hphp/test/slow/coeffects/policied/backdoor-2.php.expectf
Fatal error: Function name must be a string in %s on line 5
